# tts-copilot-tauri-desktop-app

./: .gitignore  AUDIT_REPORT.md  DISTRIBUTION.md  PRODUCTION_BUILD_GUIDE.md  PROJECT_STATUS.js  README.md  RELEASE_NOTES_v1.0.0.md  build.bat  build.sh  dev.bat  generate_icons.py  package-lock.json  package.json  preflight.js  tauri.conf.json  tts_copilot_dashboard (9).html
public/: index.html
public/css/: app.css  fontawesome.min.css  tailwind.min.css
public/js/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
