[package]
name = "tts-copilot"
version = "1.0.0"
description = "TTS Copilot - Survey Modeling Suite for Enterprise"
authors = ["Tech & Talent Solutions"]
license = "MIT"
repository = "https://github.com/yourusername/tts-copilot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["window-all", "dialog-all", "http-all", "fs-all"] }

[[bin]]
name = "tts-copilot"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
