[package]
name = "tts-copilot"
version = "1.0.0"
description = "TTS Copilot - Survey Modeling Suite for Enterprise"
authors = ["Tech & Talent Solutions"]
license = "MIT"
repository = "https://github.com/tts-workhub/tts-copilot-tauri-desktop-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "clipboard-read-text", "dialog-confirm", "clipboard-write-text", "os-all", "path-all", "dialog-save", "dialog-message", "dialog-open", "dialog-ask", "window-all", "http-all", "fs-all", "custom-protocol"] }

[[bin]]
name = "tts-copilot"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
